--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="header_container">
         <nav class="header_nav">
-            <img src="Assets/Images/6026a8f22f2d2 (1)-Photoroom.png" width="300px">
+            <img src="6026a8f22f2d2 (1)-Photoroom.png" width="300px">
             <h1 class="main_title">
                 СЫРНЫЙ<br>СОМЕЛЬЕ
             </h1>
@@ -33,7 +33,7 @@
   <main>
     <section class="news">
         <div class="news_container">
-            <img src="Assets/Images/Frame-696-_2_.jpg">
+            <img src="Frame-696-_2_.jpg">
         </div>
     </section>
     <section class="desc">
@@ -58,7 +58,7 @@
             <div class="products">
                 <div class="gauda">
                     <div class="product_img">
-                        <img src="Assets/Images/jtw30FcTCu1wHUO0Shy8Q.webp" width="300px">
+                        <img src="jtw30FcTCu1wHUO0Shy8Q.webp" width="300px">
                     </div>
                     <h2 class="product_title">
                         Сыр камамбер "Вершина Валдая"
@@ -72,7 +72,7 @@
                 </div>
                 <div class="gauda">
                     <div class="product_img">
-                        <img src="Assets/Images/zagruzka-_27_.png" width="300px">
+                        <img src="zagruzka-_27_.png" width="300px">
                     </div>
                     <h2 class="product_title">
                         Сыр Грюйер резерв"
@@ -86,7 +86,7 @@
                 </div>
                 <div class="gauda">
                     <div class="product_img">
-                        <img src="Assets/Images/Raklet_prumium.webp" width="300px">
+                        <img src="Raklet_prumium.webp" width="300px">
                     </div>
                     <h2 class="product_title">
                         Сыр Раклет Премиум 45%"
@@ -125,4 +125,5 @@
     </section>
   </main>
 </body>
+
 </html>
